// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/spin/demo/basic.md correctly 1`] = `
<div
  class="alu-spin alu-spin-spinning"
>
  <span
    class="alu-spin-dot alu-spin-dot-spin"
  >
    <i />
    <i />
    <i />
    <i />
  </span>
</div>
`;

exports[`renders ./components/spin/demo/custom-indicator.md correctly 1`] = `
<div
  class="alu-spin alu-spin-spinning"
>
  <i
    class="anticon anticon-loading alu-spin-dot"
    style="font-size:24px"
  >
    <svg
      aria-hidden="true"
      class="anticon-spin"
      data-icon="loading"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 0 0-94.3-139.9 437.71 437.71 0 0 0-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
      />
    </svg>
  </i>
</div>
`;

exports[`renders ./components/spin/demo/delayAndDebounce.md correctly 1`] = `
<div>
  <div
    class="alu-spin-nested-loading"
  >
    <div
      class="alu-spin-container"
    >
      <div
        class="alu-alert alu-alert-info alu-alert-with-description alu-alert-no-icon"
        data-show="true"
      >
        <span
          class="alu-alert-message"
        >
          Alert message title
        </span>
        <span
          class="alu-alert-description"
        >
          Further details about the context of this alert.
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    Loading state：
    <button
      aria-checked="false"
      class="alu-switch"
      role="switch"
      type="button"
    >
      <span
        class="alu-switch-inner"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/inside.md correctly 1`] = `
<div
  class="example"
>
  <div
    class="alu-spin alu-spin-spinning"
  >
    <span
      class="alu-spin-dot alu-spin-dot-spin"
    >
      <i />
      <i />
      <i />
      <i />
    </span>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/nested.md correctly 1`] = `
<div>
  <div
    class="alu-spin-nested-loading"
  >
    <div
      class="alu-spin-container"
    >
      <div
        class="alu-alert alu-alert-info alu-alert-with-description alu-alert-no-icon"
        data-show="true"
      >
        <span
          class="alu-alert-message"
        >
          Alert message title
        </span>
        <span
          class="alu-alert-description"
        >
          Further details about the context of this alert.
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    Loading state：
    <button
      aria-checked="false"
      class="alu-switch"
      role="switch"
      type="button"
    >
      <span
        class="alu-switch-inner"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/size.md correctly 1`] = `
<div>
  <div
    class="alu-spin alu-spin-sm alu-spin-spinning"
  >
    <span
      class="alu-spin-dot alu-spin-dot-spin"
    >
      <i />
      <i />
      <i />
      <i />
    </span>
  </div>
  <div
    class="alu-spin alu-spin-spinning"
  >
    <span
      class="alu-spin-dot alu-spin-dot-spin"
    >
      <i />
      <i />
      <i />
      <i />
    </span>
  </div>
  <div
    class="alu-spin alu-spin-lg alu-spin-spinning"
  >
    <span
      class="alu-spin-dot alu-spin-dot-spin"
    >
      <i />
      <i />
      <i />
      <i />
    </span>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/tip.md correctly 1`] = `
<div
  class="alu-spin-nested-loading"
>
  <div>
    <div
      class="alu-spin alu-spin-spinning alu-spin-show-text"
    >
      <span
        class="alu-spin-dot alu-spin-dot-spin"
      >
        <i />
        <i />
        <i />
        <i />
      </span>
      <div
        class="alu-spin-text"
      >
        Loading...
      </div>
    </div>
  </div>
  <div
    class="alu-spin-container alu-spin-blur"
  >
    <div
      class="alu-alert alu-alert-info alu-alert-with-description alu-alert-no-icon"
      data-show="true"
    >
      <span
        class="alu-alert-message"
      >
        Alert message title
      </span>
      <span
        class="alu-alert-description"
      >
        Further details about the context of this alert.
      </span>
    </div>
  </div>
</div>
`;
